--- a/aula15/ex017/modelo.html
+++ b/aula15/ex017/modelo.html
@@ -7,7 +7,7 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <meta http-equiv = "X-UA-Compatible" content = "ie=edge">
     <link rel = "stylesheet" href = "estilo.css">
-    <title>Modelo de exercício</title>
+    <title>Tabuada</title>
 
     <style>
         body {
@@ -18,17 +18,29 @@
 
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
 
     <section>
-        Testando...
-        <div>
-
+        <div id = "campos">
+            <label>Número:</label>
+            <input type = "number" id = "numero">
+            <button id = "botao">Gerar Tabuada</button>
         </div>
         
-        <div>
-            
+        <div id = "resultado">
+            <select id = "tabuada" multiple size = "10">
+                <option>1 x 1 = 10</option>
+                <option>1 x 2 = 10</option>
+                <option>1 x 3 = 10</option>
+                <option>1 x 4 = 10</option>
+                <option>1 x 5 = 10</option>
+                <option>1 x 6 = 10</option>
+                <option>1 x 7 = 10</option>
+                <option>1 x 8 = 10</option>
+                <option>1 x 9 = 10</option>
+                <option>1 x 10 = 10</option>
+            </select>
         </div>
     </section>
 
